--- a/index.html
+++ b/index.html
@@ -202,28 +202,34 @@
                     </div>
                 </section>
             </div>
-            <section class="form-crm">
-                <img src="img/vectortop.png" alt="">
-                <div class="wr-form-crm container">
-                    <div class="inf">
-                        <h2>Запишись на бесплатный урок
-                            по работе в CRM</h2>
-                        <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
-                        <div class="wr-form">
-                            <form class="form-bt">
-                                <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
-                                <input class="form-bt__button" type="submit" value="Оставить заявку">
-                            </form>
+            <div class="wr-bg">
+                <div class="wr-bg__top">
+                    <img src="img/vectortop.png" alt="">
+                </div>
+                <section class="form-crm">
+                    <div class="wr-form-crm container">
+                        <div class="inf">
+                            <h2>Запишись на бесплатный урок
+                                по работе в CRM</h2>
+                            <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                            <div class="wr-form">
+                                <form class="form-bt">
+                                    <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                                    <input class="form-bt__button" type="submit" value="Оставить заявку">
+                                </form>
+                            </div>
+                        </div>
+                        <div class="foto">
+                            <img class="mac" src="img/mac.png" alt="">
+                            <img class="arrow-form" src="img/arrow-form.png" alt="">
+                            <img class="zoom" src="img/zoom.png" alt="">
                         </div>
                     </div>
-                    <div class="foto">
-                        <img src="img/mac.png" alt="">
-                        <img src="img/logo-1.png" alt="">
-                        <img src="img/zoom.png" alt="">
-                    </div>
+                </section>
+                <div class="wr-bg__bt">
+                    <img src="img/vectorbt.png" alt="">
                 </div>
-                <img src="img/vectorbr.png" alt="">
-            </section>
+            </div>
         </div>
         <div class="container">
             <section class="advantages">
@@ -484,7 +490,7 @@
                                     <label for="call">Звонок</label>
                                 </div>
                             </div>
-                            <button class="btn square width">Отправить</button>
+                            <input class="btn square width" type="submit">Отправить</input>
                         </form>
                         <div class="details">
                             <p class="details__text">Адрес<br>
