--- a/services.html
+++ b/services.html
@@ -186,28 +186,35 @@
                     </div>
                 </div>
             </section>
-            <section class="form-crm">
-                <img src="img/vectortop.png" alt="">
-                <div class="wr-form-crm container">
-                    <div class="inf">
-                        <h2>Запишись на бесплатный урок
-                            по работе в CRM</h2>
-                        <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
-                        <div class="wr-form">
-                            <form class="form-bt">
-                                <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
-                                <input class="form-bt__button" type="submit" value="Оставить заявку">
-                            </form>
+        </div>
+            <div class="wr-bg">
+                <div class="wr-bg__top">
+                    <img src="img/vectortop.png" alt="">
+                </div>
+                <section class="form-crm">
+                    <div class="wr-form-crm container">
+                        <div class="inf">
+                            <h2>Запишись на бесплатный урок
+                                по работе в CRM</h2>
+                            <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                            <div class="wr-form">
+                                <form class="form-bt">
+                                    <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                                    <input class="form-bt__button" type="submit" value="Оставить заявку">
+                                </form>
+                            </div>
+                        </div>
+                        <div class="foto">
+                            <img class="mac" src="img/mac.png" alt="">
+                            <img class="arrow-form" src="img/arrow-form.png" alt="">
+                            <img class="zoom" src="img/zoom.png" alt="">
                         </div>
                     </div>
-                    <div class="foto">
-                        <img src="img/mac.png" alt="">
-                        <img src="img/logo-1.png" alt="">
-                        <img src="img/zoom.png" alt="">
-                    </div>
+                </section>
+                <div class="wr-bg__bt">
+                    <img src="img/vectorbt.png" alt="">
                 </div>
-                <img src="img/vectorbr.png" alt="">
-            </section>
+            </div>
             <section class="cases">
                 <div class="container">
                     <div class="wr-title">
@@ -337,7 +344,6 @@
                     </div>
                 </div>
             </section>
-        </div>
         <section class="project">
             <div class="container">
                 <div class="title">
