--- a/sites.html
+++ b/sites.html
@@ -51,6 +51,39 @@
     </header>
     <main>
         <div class="container">
+            <section class="home-ser">
+                <div class="home-ser-title">
+                    <h1 class="home-left__title top-title"><span>Оптимизируем бизнес</span><br>с помощью интеграция CRM</h1>
+                    <p class="home-ser-title__pr">Изучаем процессы вашей компании, настраиваем CRM-систему, подключаем интеграции и обучаем сотрудников работе с системой </p>
+                    <div class="profit">
+                        <div class="profit-img">
+                            <img src="img/testim.png" alt="">
+                        </div>
+                        <div class="profit-form">
+                            <div class="wr-btn">
+                                <button class="btn">Оставить заявку</button>
+                                <button class="btn">Обсудить проект</button>
+                            </div>
+                            <div class="wr-btn">
+                                <div class="wr-img__foto">
+                                    <img src="img/testcir.png" alt="">
+                                    <img src="img/testcir.png" alt="">
+                                    <img src="img/testcir.png" alt="">
+                                </div>
+                                <p class="wr-img__par"><span>+25%</span><br>увеличения прибыли</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="home-picture">
+                    <img class="home-picture__img" src="img/test3.png">
+                    <button class="btn home-btn">бесплатная консультация</button>
+                    <div class="picture-card">
+                        <img src="img/testel.png" alt="">
+                        <p class="picture-card__text">Правильно настроенная CRM делает бизнес эффективным и организованным, обеспечивая бесперебойную работу и высокое качество обслуживания клиентов.</p>
+                    </div>
+                </div>
+            </section>
             <section class="necessity">
                 <h2 class="up-title"><span>Мы предлагаем</span><br>своим клиентам услуги</h2>
                 <!--<p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
@@ -185,28 +218,35 @@
                     </div>
                 </div>
             </section>
-            <section class="form-crm">
-                <img src="img/vectortop.png" alt="">
-                <div class="wr-form-crm container">
-                    <div class="inf">
-                        <h2>Запишись на бесплатный урок
-                            по работе в CRM</h2>
-                        <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
-                        <div class="wr-form">
-                            <form class="form-bt">
-                                <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
-                                <input class="form-bt__button" type="submit" value="Оставить заявку">
-                            </form>
+        </div>
+            <div class="wr-bg">
+                <div class="wr-bg__top">
+                    <img src="img/vectortop.png" alt="">
+                </div>
+                <section class="form-crm">
+                    <div class="wr-form-crm container">
+                        <div class="inf">
+                            <h2>Запишись на бесплатный урок
+                                по работе в CRM</h2>
+                            <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                            <div class="wr-form">
+                                <form class="form-bt">
+                                    <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                                    <input class="form-bt__button" type="submit" value="Оставить заявку">
+                                </form>
+                            </div>
+                        </div>
+                        <div class="foto">
+                            <img class="mac" src="img/mac.png" alt="">
+                            <img class="arrow-form" src="img/arrow-form.png" alt="">
+                            <img class="zoom" src="img/zoom.png" alt="">
                         </div>
                     </div>
-                    <div class="foto">
-                        <img src="img/mac.png" alt="">
-                        <img src="img/logo-1.png" alt="">
-                        <img src="img/zoom.png" alt="">
-                    </div>
+                </section>
+                <div class="wr-bg__bt">
+                    <img src="img/vectorbt.png" alt="">
                 </div>
-                <img src="img/vectorbr.png" alt="">
-            </section>
+            </div>
             <section class="cases">
                 <div class="container">
                     <div class="wr-title">
@@ -336,7 +376,6 @@
                     </div>
                 </div>
             </section>
-        </div>
         <section class="project">
             <div class="container">
                 <div class="title">
