--- a/services.html
+++ b/services.html
@@ -51,6 +51,39 @@
     </header>
     <main>
         <div class="container">
+            <section class="home-ser">
+                <div class="home-ser-title">
+                    <h1 class="home-left__title top-title"><span>Оптимизируем бизнес</span><br>с помощью интеграция CRM</h1>
+                    <p class="home-ser-title__pr">Изучаем процессы вашей компании, настраиваем CRM-систему, подключаем интеграции и обучаем сотрудников работе с системой </p>
+                    <div class="profit">
+                        <div class="profit-img">
+                            <img src="img/testim.png" alt="">
+                        </div>
+                        <div class="profit-form">
+                            <div class="wr-btn">
+                                <button class="btn">Оставить заявку</button>
+                                <button class="btn">Обсудить проект</button>
+                            </div>
+                            <div class="wr-btn">
+                                <div class="wr-btn__foto">
+                                    <img src="img/testcir.png" alt="">
+                                    <img src="img/testcir.png" alt="">
+                                    <img src="img/testcir.png" alt="">
+                                </div>
+                                <p class="wr-btn__par"><span>+25%</span><br>увеличения прибыли</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="home-picture">
+                    <img class="home-picture__img" src="img/test3.png">
+                    <button class="btn home-btn">бесплатная консультация</button>
+                    <div class="picture-card">
+                        <img src="img/testel.png" alt="">
+                        <p class="picture-card__text">Правильно настроенная CRM делает бизнес эффективным и организованным, обеспечивая бесперебойную работу и высокое качество обслуживания клиентов.</p>
+                    </div>
+                </div>
+            </section>
             <section class="necessity">
                 <h2 class="up-title"><span>Проблемы, которые не оставляют шансов</span><br> Когда CRM становится необходимостью</h2>
                 <p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
