--- a/sites.html
+++ b/sites.html
@@ -65,12 +65,12 @@
                                 <button class="btn">Обсудить проект</button>
                             </div>
                             <div class="wr-btn">
-                                <div class="wr-img__foto">
+                                <div class="wr-btn__foto">
                                     <img src="img/testcir.png" alt="">
                                     <img src="img/testcir.png" alt="">
                                     <img src="img/testcir.png" alt="">
                                 </div>
-                                <p class="wr-img__par"><span>+25%</span><br>увеличения прибыли</p>
+                                <p class="wr-btn__par"><span>+25%</span><br>увеличения прибыли</p>
                             </div>
                         </div>
                     </div>
