--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A3d52e20dcd553bc338d47fda89d9a68ba2ccba254d50a53c5aa35a8385de69ed&amp;source=constructor" width="100%" height="512" frameborder="0"></iframe>
             </div>
         </section>
-        <div class="modal">
+        <!--<div class="modal">
             <div class="blackout">
                 <div class="close-modal">Х</div>
                 <section class="feedback container">
@@ -564,7 +564,7 @@
                     </div>
                 </section>
             </div>
-        </div>
+        </div>-->
     </main>
     
     <footer class="container">
