--- a/index.html
+++ b/index.html
@@ -203,9 +203,7 @@
                 </section>
             </div>
             <div class="wr-bg">
-                <div class="wr-bg__top">
-                    <img src="img/vectortop.png" alt="">
-                </div>
+                <img class="wr-bg__top" src="img/vectortop.png" alt="">
                 <section class="form-crm">
                     <div class="wr-form-crm container">
                         <div class="inf">
@@ -226,9 +224,7 @@
                         </div>
                     </div>
                 </section>
-                <div class="wr-bg__bt">
-                    <img src="img/vectorbt.png" alt="">
-                </div>
+                <img class="wr-bg__bt" src="img/vectorbt.png" alt="">
             </div>
         </div>
         <div class="container">
@@ -268,8 +264,15 @@
                         <div class="cases-card">
                             <div class="wr-cases">
                                 <h3>ЦНМ</h3>
-                                <div class="wr-cases__result">
-                                    <p>Описание результата</p>
+                                <div class="cases-result">
+                                    <div class="result-cas">
+                                        <span>+220</span>
+                                        <p class="result-cas__par">Довольных клиентов</p>
+                                    </div>
+                                    <div class="result-cas">
+                                        <span>67%</span>
+                                        <p class="result-cas__par">Довольных клиентов</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="cases-card__btn">
@@ -279,7 +282,7 @@
                         <div class="cases-card">
                             <div class="wr-cases">
                                 <h3>Мосроллета</h3>
-                                <div class="wr-cases__result">
+                                <div class="cases-result">
                                     <p>Описание результата</p>
                                 </div>
                             </div>
@@ -290,7 +293,7 @@
                         <div class="cases-card">
                             <div class="wr-cases">
                                 <h3>Geometrium</h3>
-                                <div class="wr-cases__result">
+                                <div class="cases-result">
                                     <p>Описание результата</p>
                                 </div>
                             </div>
@@ -301,7 +304,7 @@
                         <div class="cases-card">
                             <div class="wr-cases">
                                 <h3>Губерния online</h3>
-                                <div class="wr-cases__result">
+                                <div class="cases-result">
                                     <p>Описание результата</p>
                                 </div>
                             </div>
@@ -312,7 +315,7 @@
                         <div class="cases-card">
                             <div class="wr-cases">
                                 <h3>Энергопилот</h3>
-                                <div class="wr-cases__result">
+                                <div class="cases-result">
                                     <p>Описание результата</p>
                                 </div>
                             </div>
